--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Загрузка изображений</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -66,6 +67,7 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+            cursor: pointer;
         }
         .image-preview .remove-button {
             position: absolute;
@@ -74,13 +76,63 @@
             background-color: #dc3545;
             color: white;
             border: none;
+            padding: 5px;
+            border-radius: 50%;
+            cursor: pointer;
+            font-size: 18px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .image-preview .remove-button:hover {
+            background-color: #c82333;
+        }
+        .image-card {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 1000;
+            width: 80%;
+            max-width: 600px;
+            background-color: white;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            border-radius: 10px;
+            overflow: hidden;
+            padding: 20px;
+            box-sizing: border-box;
+        }
+        .image-card img {
+            width: 100%;
+            height: auto;
+            display: block;
+            margin: 0 auto;
+        }
+        .image-card .close-button {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            background-color: #dc3545;
+            color: white;
+            border: none;
             padding: 5px 10px;
             border-radius: 50%;
             cursor: pointer;
             font-size: 14px;
         }
-        .image-preview .remove-button:hover {
+        .image-card .close-button:hover {
             background-color: #c82333;
+        }
+        .overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            z-index: 999;
         }
     </style>
 </head>
@@ -94,9 +146,19 @@
         <div id="previewContainer" class="image-preview"></div>
     </form>
 
+    <div id="imageCard" class="image-card">
+        <button class="close-button">×</button>
+        <img id="cardImage" src="" alt="Увеличенное изображение">
+    </div>
+    <div id="overlay" class="overlay"></div>
+
     <script>
         const imageUpload = document.getElementById('imageUpload');
         const previewContainer = document.getElementById('previewContainer');
+        const imageCard = document.getElementById('imageCard');
+        const cardImage = document.getElementById('cardImage');
+        const overlay = document.getElementById('overlay');
+        const closeButton = imageCard.querySelector('.close-button');
 
         imageUpload.addEventListener('change', (event) => {
             const files = Array.from(event.target.files);
@@ -109,11 +171,17 @@
                     const img = document.createElement('img');
                     img.src = e.target.result;
                     img.alt = 'Превью изображения';
+                    img.addEventListener('click', () => {
+                        cardImage.src = img.src;
+                        imageCard.style.display = 'block';
+                        overlay.style.display = 'block';
+                    });
 
                     const removeButton = document.createElement('button');
-                    removeButton.textContent = '×';
-                    removeButton.classList.add('remove-button');
-                    removeButton.addEventListener('click', () => {
+                    removeButton.classList.add('remove-button', 'material-icons');
+                    removeButton.textContent = 'delete';
+                    removeButton.addEventListener('click', (event) => {
+                        event.preventDefault(); // Предотвращаем отправку формы
                         if (confirm('Вы действительно хотите удалить это изображение?')) {
                             previewDiv.remove();
 
@@ -130,6 +198,16 @@
                 };
                 reader.readAsDataURL(file);
             });
+        });
+
+        closeButton.addEventListener('click', () => {
+            imageCard.style.display = 'none';
+            overlay.style.display = 'none';
+        });
+
+        overlay.addEventListener('click', () => {
+            imageCard.style.display = 'none';
+            overlay.style.display = 'none';
         });
     </script>
 </body>
