--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <form>
         <label for="imageUpload" class="upload-button">
             Выберите изображения
-            <input type="file" id="imageUpload" accept="image/*" multiple>
+            <input type="file" id="imageUpload" accept="image/*" capture="environment" multiple>
         </label>
         <div id="previewContainer" class="image-preview"></div>
     </form>
