--- a/index.html
+++ b/index.html
@@ -1,213 +1,42 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Загрузка изображений</title>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 20px;
-            background-color: #f8f9fa;
-            color: #343a40;
-        }
-        h1 {
-            text-align: center;
-            color: #007bff;
-        }
-        form {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        label {
-            margin-bottom: 10px;
-            font-size: 18px;
-            font-weight: bold;
-        }
-        .upload-button {
-            display: inline-block;
-            padding: 10px 20px;
-            font-size: 16px;
-            font-weight: bold;
-            color: white;
-            background-color: #007bff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-        .upload-button:hover {
-            background-color: #0056b3;
-        }
-        .upload-button:active {
-            background-color: #004085;
-        }
-        .upload-button input {
-            display: none;
-        }
-        .image-preview {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 15px;
-            justify-content: center;
-        }
-        .image-preview div {
-            position: relative;
-            display: inline-block;
-            width: 120px;
-            height: 120px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
-            overflow: hidden;
-            background-color: #f8f9fa;
-        }
-        .image-preview img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            cursor: pointer;
-        }
-        .image-preview .remove-button {
-            position: absolute;
-            top: 5px;
-            right: 5px;
-            background-color: #dc3545;
-            color: white;
-            border: none;
-            padding: 5px;
-            border-radius: 50%;
-            cursor: pointer;
-            font-size: 18px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        .image-preview .remove-button:hover {
-            background-color: #c82333;
-        }
-        .image-card {
-            display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            z-index: 1000;
-            width: 80%;
-            max-width: 600px;
-            background-color: white;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            border-radius: 10px;
-            overflow: hidden;
-            padding: 20px;
-            box-sizing: border-box;
-        }
-        .image-card img {
-            width: 100%;
-            height: auto;
-            display: block;
-            margin: 0 auto;
-        }
-        .image-card .close-button {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            background-color: #dc3545;
-            color: white;
-            border: none;
-            padding: 5px 10px;
-            border-radius: 50%;
-            cursor: pointer;
-            font-size: 14px;
-        }
-        .image-card .close-button:hover {
-            background-color: #c82333;
-        }
-        .overlay {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            z-index: 999;
-        }
-    </style>
+    <title>Image Upload</title>
 </head>
 <body>
-    <h1>Загрузка изображений</h1>
+    <h1>Загрузить изображение</h1>
     <form>
-        <label for="imageUpload" class="upload-button">
-            Выберите изображения
-            <input type="file" id="imageUpload" accept="image/*" capture="environment" multiple>
+        <label for="upload-button" style="cursor: pointer;">
+            <button type="button">Выбрать или сделать снимок</button>
         </label>
-        <div id="previewContainer" class="image-preview"></div>
+        <input id="upload-button" type="file" accept="image/*" capture="environment" style="display: none;">
     </form>
 
-    <div id="imageCard" class="image-card">
-        <button class="close-button">×</button>
-        <img id="cardImage" src="" alt="Увеличенное изображение">
+    <p id="image-info"></p>
+    <div id="preview" style="margin-top: 20px;">
+        <img id="image-preview" src="" alt="Preview" style="max-width: 100%; display: none;">
     </div>
-    <div id="overlay" class="overlay"></div>
 
     <script>
-        const imageUpload = document.getElementById('imageUpload');
-        const previewContainer = document.getElementById('previewContainer');
-        const imageCard = document.getElementById('imageCard');
-        const cardImage = document.getElementById('cardImage');
-        const overlay = document.getElementById('overlay');
-        const closeButton = imageCard.querySelector('.close-button');
+        const uploadButton = document.getElementById('upload-button');
+        const imagePreview = document.getElementById('image-preview');
+        const imageInfo = document.getElementById('image-info');
 
-        imageUpload.addEventListener('change', (event) => {
-            const files = Array.from(event.target.files);
-
-            files.forEach((file) => {
+        uploadButton.addEventListener('change', (event) => {
+            const file = event.target.files[0];
+            if (file) {
+                imageInfo.textContent = `Выбран файл: ${file.name}`;
                 const reader = new FileReader();
                 reader.onload = (e) => {
-                    const previewDiv = document.createElement('div');
-
-                    const img = document.createElement('img');
-                    img.src = e.target.result;
-                    img.alt = 'Превью изображения';
-                    img.addEventListener('click', () => {
-                        cardImage.src = img.src;
-                        imageCard.style.display = 'block';
-                        overlay.style.display = 'block';
-                    });
-
-                    const removeButton = document.createElement('button');
-                    removeButton.classList.add('remove-button', 'material-icons');
-                    removeButton.textContent = 'delete';
-                    removeButton.addEventListener('click', (event) => {
-                        event.preventDefault(); // Предотвращаем отправку формы
-                        if (confirm('Вы действительно хотите удалить это изображение?')) {
-                            previewDiv.remove();
-
-                            // Проверяем, если нет изображений, очищаем input
-                            if (previewContainer.children.length === 0) {
-                                imageUpload.value = '';
-                            }
-                        }
-                    });
-
-                    previewDiv.appendChild(img);
-                    previewDiv.appendChild(removeButton);
-                    previewContainer.appendChild(previewDiv);
+                    imagePreview.src = e.target.result;
+                    imagePreview.style.display = 'block';
                 };
                 reader.readAsDataURL(file);
-            });
-        });
-
-        closeButton.addEventListener('click', () => {
-            imageCard.style.display = 'none';
-            overlay.style.display = 'none';
-        });
-
-        overlay.addEventListener('click', () => {
-            imageCard.style.display = 'none';
-            overlay.style.display = 'none';
+            } else {
+                imageInfo.textContent = 'Файл не выбран.';
+            }
         });
     </script>
 </body>
