--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Загрузить изображение</h1>
     <!-- Основная кнопка -->
-    <button id="upload-button">Выбрать или сделать снимок</button>
+    <button id="upload-button">Выбрать изображение</button>
     <!-- Невидимый элемент загрузки -->
-    <input id="file-input" type="file" accept="image/*" capture="environment" style="display: none;">
+    <input id="file-input" type="file" accept="image/*" style="display: none;">
 
     <p id="file-name"></p>
     <div id="preview" style="margin-top: 20px;">
