--- a/index.html
+++ b/index.html
@@ -1,48 +1,114 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Загрузить изображение</title>
+    <title>Загрузка изображений</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 20px;
+            background-color: #f8f9fa;
+            color: #343a40;
+        }
+        h1 {
+            text-align: center;
+            color: #007bff;
+        }
+        .button-container {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin: 20px 0;
+        }
+        .action-button {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            padding: 10px 20px;
+            font-size: 16px;
+            font-weight: bold;
+            color: white;
+            background-color: #007bff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        .action-button i.material-icons {
+            font-size: 20px;
+        }
+        .action-button:hover {
+            background-color: #0056b3;
+        }
+        .action-button:active {
+            background-color: #004085;
+        }
+        .image-preview {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 15px;
+            justify-content: center;
+        }
+        .image-preview div {
+            position: relative;
+            display: inline-block;
+            width: 120px;
+            height: 120px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            overflow: hidden;
+            background-color: #f8f9fa;
+        }
+        .image-preview img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    </style>
 </head>
 <body>
-    <h1>Загрузить изображение</h1>
-    <!-- Основная кнопка -->
-    <button id="upload-button">Выбрать изображение</button>
-    <!-- Невидимый элемент загрузки -->
-    <input id="file-input" type="file" accept="image/*" style="display: none;">
-
-    <p id="file-name"></p>
-    <div id="preview" style="margin-top: 20px;">
-        <img id="image-preview" src="" alt="Предпросмотр изображения" style="max-width: 100%; display: none;">
+    <h1>Загрузка изображений</h1>
+    <div class="button-container">
+        <button class="action-button" id="takePhoto">
+            <i class="material-icons">photo_camera</i>
+            Сделать фото
+        </button>
+        <label class="action-button">
+            <i class="material-icons">file_upload</i>
+            Загрузить из галереи
+            <input type="file" id="imageUpload" accept="image/*" style="display: none;">
+        </label>
     </div>
+    <div id="previewContainer" class="image-preview"></div>
 
     <script>
-        const uploadButton = document.getElementById('upload-button');
-        const fileInput = document.getElementById('file-input');
-        const fileName = document.getElementById('file-name');
-        const imagePreview = document.getElementById('image-preview');
+        const takePhotoButton = document.getElementById('takePhoto');
+        const imageUpload = document.getElementById('imageUpload');
+        const previewContainer = document.getElementById('previewContainer');
 
-        // Открытие окна выбора файла при клике на кнопку
-        uploadButton.addEventListener('click', () => {
-            fileInput.click();
+        takePhotoButton.addEventListener('click', () => {
+            alert('Функция сделать фото пока не реализована.');
         });
 
-        // Обработка выбора файла
-        fileInput.addEventListener('change', (event) => {
-            const file = event.target.files[0];
-            if (file) {
-                fileName.textContent = `Выбран файл: ${file.name}`;
+        imageUpload.addEventListener('change', (event) => {
+            const files = Array.from(event.target.files);
+
+            files.forEach((file) => {
                 const reader = new FileReader();
                 reader.onload = (e) => {
-                    imagePreview.src = e.target.result;
-                    imagePreview.style.display = 'block';
+                    const previewDiv = document.createElement('div');
+
+                    const img = document.createElement('img');
+                    img.src = e.target.result;
+                    img.alt = 'Превью изображения';
+
+                    previewDiv.appendChild(img);
+                    previewContainer.appendChild(previewDiv);
                 };
                 reader.readAsDataURL(file);
-            } else {
-                fileName.textContent = 'Файл не выбран.';
-                imagePreview.style.display = 'none';
-            }
+            });
         });
     </script>
 </body>
