--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
         }
 
         .file-input-container {
-            position: relative;
-            overflow: hidden;
-            display: inline-block;
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 15px;
         }
 
         .file-input-container input[type="file"] {
@@ -187,7 +187,9 @@
         }
 
         .file-input-container .file-input-label {
-            display: block;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             padding: 12px;
             border: 1px solid #ddd;
             border-radius: 8px;
@@ -197,6 +199,8 @@
             cursor: pointer;
             transition: border-color 0.3s, box-shadow 0.3s;
             font-size: 14px;
+            flex: 1;
+            margin-right: 10px;
         }
 
         .file-input-container .file-input-label:hover {
@@ -343,14 +347,19 @@
 
             <label for="check_photo">Визуальное доказательство: <span class="required">*</span></label>
             <div class="file-input-container">
-                <input type="file" id="check_photo" name="check_photo" accept="image/*" capture="environment" style="display:none;" required>
-                <button type="button" class="capture-photo-button" onclick="document.getElementById('check_photo').click()">Сделать фото</button>
-                <button type="button" class="file-input-label" onclick="document.getElementById('check_photo').click()">Загрузить из галереи</button>
+                <input type="file" id="check_photo_camera" name="check_photo" accept="image/*" capture="environment" style="display:none;">
+                <button type="button" class="file-input-label" onclick="document.getElementById('check_photo_camera').click()">
+                    <span class="material-icons">camera_alt</span>
+                </button>
+                <input type="file" id="check_photo_gallery" name="check_photo" accept="image/*" style="display:none;">
+                <button type="button" class="file-input-label" onclick="document.getElementById('check_photo_gallery').click()">
+                    <span class="material-icons">photo_library</span>
+                </button>
             </div>
 
             <div class="thumbnail-container" id="thumbnailContainer" style="display:none;">
                 <img id="thumbnail" src="" alt="Миниатюра">
-                <button type="button" class="delete-button" onclick="deletePhoto()">×</button>
+                <button type="button" class="delete-button" onclick="confirmDeletePhoto()">×</button>
             </div>
 
             <label for="comment">Комментарий:</label>
@@ -371,10 +380,11 @@
             const loader = document.getElementById('loader');
             const successMessage = document.getElementById('successMessage');
             const submitButton = document.getElementById('submitButton');
-            const checkPhotoInput = document.getElementById('check_photo');
+            const checkPhotoInputCamera = document.getElementById('check_photo_camera');
+            const checkPhotoInputGallery = document.getElementById('check_photo_gallery');
             const accountingTypeInput = document.getElementById('accounting_type');
 
-            if (checkPhotoInput.files.length === 0) {
+            if (checkPhotoInputCamera.files.length === 0 && checkPhotoInputGallery.files.length === 0) {
                 alert('Пожалуйста, добавьте визуальное доказательство.');
                 return;
             }
@@ -414,17 +424,33 @@
             const today = new Date().toISOString().split('T')[0];
             document.getElementById('date').value = today;
             document.getElementById('accounting_type').selectedIndex = 0;
-            document.getElementById('check_photo').value = '';
+            document.getElementById('check_photo_camera').value = '';
+            document.getElementById('check_photo_gallery').value = '';
             document.getElementById('comment').value = '';
             document.getElementById('thumbnailContainer').style.display = 'none';
         }
 
-        function deletePhoto() {
-            document.getElementById('thumbnailContainer').style.display = 'none';
-            document.getElementById('check_photo').value = '';
+        function confirmDeletePhoto() {
+            if (confirm('Вы уверены, что хотите удалить фото?')) {
+                deletePhoto();
+            }
         }
 
-        document.getElementById('check_photo').addEventListener('change', function(event) {
+        function deletePhoto() {
+            document.getElementById('thumbnailContainer').style.display = 'none';
+            document.getElementById('check_photo_camera').value = '';
+            document.getElementById('check_photo_gallery').value = '';
+        }
+
+        document.getElementById('check_photo_camera').addEventListener('change', function(event) {
+            handleFileChange(event);
+        });
+
+        document.getElementById('check_photo_gallery').addEventListener('change', function(event) {
+            handleFileChange(event);
+        });
+
+        function handleFileChange(event) {
             const file = event.target.files[0];
             if (file) {
                 const reader = new FileReader();
@@ -434,7 +460,7 @@
                 };
                 reader.readAsDataURL(file);
             }
-        });
+        }
     </script>
 </body>
 </html>
